--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="form-div">
             <h1>WEBONIXS</h1>
             <p>GET INSTANT LAB WORKSHEET! (Exclusive for IARE'N)</p>
-            <form action="#">
+            <form action="#pdf-div">
                 <input class="in" type="text" placeholder="Enter Roll No." id="rollNo">
                 <input class="in" type="number" min="1" max="8" placeholder="Enter Sem" id="sem">
                 <input class="in" type="text" placeholder="Enter Course Code" id="subCode" style="margin-bottom: 0;">
@@ -32,7 +32,7 @@
         </div>
 
         <div class="footer"> 
-            <p style="font-size: 18px;">Designed and Developed with &hearts; !</p>
+            <p id="love" style="font-size: 18px;">Designed and Developed with &hearts; !</p>
         </div>
     </div>
 
