--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="footer"> 
-            <p id="love" style="font-size: 18px;">Designed and Developed with &hearts; !</p>
+            <p id="love" style="font-size: 18px; font-weight: 550;">Designed and Developed with &hearts; !</p>
         </div>
     </div>
 
