--- a/courseCode.html
+++ b/courseCode.html
@@ -22,7 +22,7 @@
             </tr>
         </thead>
         <tbody id="course-table">
-            <tr>
+            <tr> 
                 <td title="copy" class="copy-field">AEEC04</td>
                 <td>Basic Electrical Engineering Laboratory</td>
             </tr>
@@ -31,16 +31,129 @@
                 <td>Python Programming Laboratory</td>
             </tr>
             <tr>
-                <td title="copy" class="copy-field">ACSC03</td> 
-                <td>Java Programming Laboratory</td>    
+                <td title="copy" class="copy-field">AMEC04</td>
+                <td>Engineering Workshop Practice</td>
             </tr>
             <tr>
-                <td title="copy" class="copy-field">ACSC04</td>
-                <td>Web Technologies Laboratory</td>
+                <td title="copy" class="copy-field">AHSC04</td>
+                <td>English Language and Communication Skills Laboratory</td>
             </tr>
-        </tbody>
+            <tr>
+                <td title="copy" class="copy-field">AHSC05</td>
+                <td>Physics Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">ACSC05</td>
+                <td>Programming for Problem Solving using C Laboratory</td>
+            </tr>
+            <tr> 
+                <td title="copy" class="copy-field">ACSC10</td>
+                <td>Data Structures Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AITC03</td>
+                <td>Programming with Objects Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">ACSC11</td>
+                <td>Advanced Python Programming Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AITC07</td>
+                <td>Database Management Systems Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">ACSC15</td>
+                <td>Design and Analysis of Algorithms Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AITC08</td>
+                <td>Linux Internals Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">ACSC21</td>
+                <td>Object Oriented Software Design Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AITC10</td>
+                <td>Web Application Development Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AITC22</td>
+                <td>Data Warehousing and Data Mining Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AITC23</td>
+                <td>Software Testing Methodologies Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AITC29</td>
+                <td>Big Data and Business Analytics Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AITC30</td>
+                <td>Cloud Computing Laboratory</td>
+            </tr>
+            <tr> 
+                <td title="copy" class="copy-field">AMEC02</td>
+                <td>Manufacturing Practice</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AMEC03</td>
+                <td>Computer Aided Engineering Drawing</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">ACSC03</td>
+                <td>Programming for Problem Solving Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AAEC04</td>
+                <td>Fluid Dynamics Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AAEC05</td>
+                <td>Mechanics of Solids Laboratory</td>
+            </tr>
+            <tr> 
+                <td title="copy" class="copy-field">AAEC11</td>
+                <td>Aerospace Structures Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AAEC12</td>
+                <td>Aerodynamics and Propulsion Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AAEC13</td>
+                <td>Aircraft Production Technology Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AAEC21</td>
+                <td>Computer Aided Aircraft Production Drawing Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AAEC22</td>
+                <td>Computational Structure Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AAEC32</td>
+                <td>Computational Aerodynamics Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AAEC33</td>
+                <td>Computer Aided Manufacturing (CAM) Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AAEC44</td>
+                <td>Flight Vehicle Design Laboratory</td>
+            </tr>
+            <tr>
+                <td title="copy" class="copy-field">AAEC45</td>
+                <td>Aerospace Structural Dynamics Laboratory</td>
+            </tr>
+        </tbody>       
     </table>
-
+    <p>Didn't get it? <a href="https://www.iare.ac.in/?q=Departments">Visit for a deeper dive...</a></p>
+    <br><br><br><br>
     <script src="courseCode.js"></script>
 
 </body>
