--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main-div">
         <div class="form-div">
             <h1 class="bounce-in">WEBONIXS</h1>
-            <p class="zoom-in">GET INSTANT LAB WORKSHEET! (Exclusive for IARE'N)</p>
+            <p class="zoom-in">GET INSTANT LAB WORKSHEET! (Exclusively for IARE'Ns)</p>
             <form action="#pdf-div">
                 <input class="in glow-in" type="text" placeholder="Enter Roll No." id="rollNo" required>
                 <input class="in glow-in" type="number" min="1" max="8" placeholder="Enter Sem" id="sem" required>
