--- a/courseCode.html
+++ b/courseCode.html
@@ -13,7 +13,7 @@
     <div id="search-container">
         <input type="text" id="search" placeholder="Search for a course.">
     </div>
-
+    <div id="alert"></div>
     <table>
         <thead>
             <tr>
@@ -152,7 +152,7 @@
             </tr>
         </tbody>       
     </table>
-    <p>Didn't get it? <a href="https://www.iare.ac.in/?q=Departments">Visit for a deeper dive...</a></p>
+    <p>Didn't get it? <a href="https://www.iare.ac.in/?q=Departments">Visit for a deeper dive.</a></p>
     <br><br><br><br>
     <script src="courseCode.js"></script>
 
